static/styles/custom.css
.no-select {
  -webkit-user-select: none; /* Chrome all / Safari all */
  -moz-user-select: none; /* Firefox all */
  -ms-user-select: none; /* IE 10+ */
  user-select: none; /* Likely future */
}

.pointer {
  cursor: pointer !important;
}
.django-ckeditor-widget {
  width: 100% !important;
}

#cke_id_description {
  width: 100% !important;
}

.avatar {
  width: 200px !important;
  height: 200px !important;
  border-radius: 50% !important;
}

